--- a/references.bib
+++ b/references.bib
@@ -1,373 +1,441 @@
 @inproceedings{AGotz1999TANGOA,
- author = {Chaize, J-M. and G¨otz, A. and Meyer, J. and Pérez, María and Taurel, E.},
- title = {TANGO - AN OBJECT ORIENTED CONTROL SYSTEM BASED ON CORBA},
- year = {1999},
- booktitle = {ICALEPCS}
+  author =       {Chaize, J-M. and G¨otz, A. and Meyer, J. and Pérez,
+                  María and Taurel, E.},
+  title =        {TANGO - AN OBJECT ORIENTED CONTROL SYSTEM BASED ON
+                  CORBA},
+  year =         1999,
+  booktitle =    {ICALEPCS}
 }
 
 @article{AllanDanielB2019a,
- author = {Allan, Daniel and Caswell, Thomas and Campbell, Stuart and Rakitin, Maksim},
- title = {Bluesky's Ahead: A Multi-Facility
-Collaboration for an a la Carte Software Project for
-Data Acquisition and Management},
- journal = {Synchrotron Radiation News},
- publisher = {Informa UK Limited},
- year = {2019},
- month = {May},
- number = {3},
- volume = {32},
- pages = {19--22},
- doi = {10.1080/08940886.2019.1608121}
+  author =       {Allan, Daniel and Caswell, Thomas and Campbell,
+                  Stuart and Rakitin, Maksim},
+  title =        {Bluesky's Ahead: A Multi-Facility Collaboration for
+                  an a la Carte Software Project for Data Acquisition
+                  and Management},
+  journal =      {Synchrotron Radiation News},
+  publisher =    {Informa UK Limited},
+  year =         2019,
+  month =        {May},
+  number =       3,
+  volume =       32,
+  pages =        {19--22},
+  doi =          {10.1080/08940886.2019.1608121}
 }
 
 @article{Arkilic2015,
- author = {Arkilic, Arman and Allan, Daniel and Chabot, Daron and Dalesio, Leo and Lewis, Wayne},
- title = {Databroker: An Interface for NSLS-II Data Management System},
- journal = {Proceedings of the 15th Int. Conf. on Accelerator and Large Experimental Physics Control Systems},
- publisher = {JACoW, Geneva, Switzerland},
- year = {2015},
- volume = {ICALEPCS2015},
- pages = {Australia},
- url = {http://accelconf.web.cern.ch/AccelConf/DOI/ICALEPCS2015/JACoW-ICALEPCS2015-WED3O02.html},
- doi = {10.18429/JACOW-ICALEPCS2015-WED3O02},
- copyright = {CC 3.0},
- keyword = {Accelerator Physics, Data Management, Analytics &amp, Visualisation},
- language = {en}
+  author =       {Arkilic, Arman and Allan, Daniel and Chabot, Daron
+                  and Dalesio, Leo and Lewis, Wayne},
+  title =        {Databroker: An Interface for NSLS-II Data Management
+                  System},
+  journal =      {Proceedings of the 15th Int. Conf. on Accelerator
+                  and Large Experimental Physics Control Systems},
+  publisher =    {JACoW, Geneva, Switzerland},
+  year =         2015,
+  volume =       {ICALEPCS2015},
+  pages =        {Australia},
+  url =
+                  {http://accelconf.web.cern.ch/AccelConf/DOI/ICALEPCS2015/JACoW-ICALEPCS2015-WED3O02.html},
+  doi =          {10.18429/JACOW-ICALEPCS2015-WED3O02},
+  copyright =    {CC 3.0},
+  keyword =      {Accelerator Physics, Data Management, Analytics
+                  &amp, Visualisation},
+  language =     {en}
 }
 
 @article{Arkilic_2017,
- author = {Arkilic, A. and Allan, D. B. and Caswell, T. A. and Li, L. and Lauer, K. and Abeykoon, S.},
- title = {Towards Integrated Facility-Wide Data Acquisition and Analysis at NSLS-II},
- journal = {Synchrotron Radiation News},
- publisher = {Informa UK Limited},
- year = {2017},
- month = {mar},
- number = {2},
- volume = {30},
- pages = {44--45},
- url = {https://doi.org/10.1080%2F08940886.2017.1289810},
- doi = {10.1080/08940886.2017.1289810}
+  author =       {Arkilic, A. and Allan, D. B. and Caswell, T. A. and
+                  Li, L. and Lauer, K. and Abeykoon, S.},
+  title =        {Towards Integrated Facility-Wide Data Acquisition
+                  and Analysis at NSLS-II},
+  journal =      {Synchrotron Radiation News},
+  publisher =    {Informa UK Limited},
+  year =         2017,
+  month =        {mar},
+  number =       2,
+  volume =       30,
+  pages =        {44--45},
+  url =          {https://doi.org/10.1080%2F08940886.2017.1289810},
+  doi =          {10.1080/08940886.2017.1289810}
 }
 
 @misc{AvroSpecification,
- title = {Apache Avro Specification},
- year = {2022},
- url = {https://avro.apache.org/docs/1.11.1/specification/},
- note = {Accessed: 2022-10-02}
+  title =        {Apache Avro Specification},
+  year =         2022,
+  url =          {https://avro.apache.org/docs/1.11.1/specification/},
+  note =         {Accessed: 2022-10-02}
 }
 
 @misc{Bogdanowicz2022,
- author = {Bogdanowicz, Nate and Rogers, Christopher and Weber, Sébastien and {Zakv}  and Pelissier, Sylvain and Wheeler, Jonathan and {Cxz}  and Marazzi, Francesco and {Eedm}  and Galinskiy, Ivan},
- title = {mabuchilab/Instrumental: 0.7},
- publisher = {Zenodo},
- year = {2022},
- url = {https://zenodo.org/record/2556398},
- doi = {10.5281/ZENODO.2556398},
- copyright = {Open Access}
+  author =       {Bogdanowicz, Nate and Rogers, Christopher and Weber,
+                  Sébastien and {Zakv} and Pelissier, Sylvain and
+                  Wheeler, Jonathan and {Cxz} and Marazzi, Francesco
+                  and {Eedm} and Galinskiy, Ivan},
+  title =        {mabuchilab/Instrumental: 0.7},
+  publisher =    {Zenodo},
+  year =         2022,
+  url =          {https://zenodo.org/record/2556398},
+  doi =          {10.5281/ZENODO.2556398},
+  copyright =    {Open Access}
 }
 
 @article{Campagnola_2014,
- author = {Campagnola, Luke and Kratz, Megan B. and Manis, Paul B.},
- title = {ACQ4: an open-source software platform for data acquisition and analysis in neurophysiology research},
- journal = {Frontiers in Neuroinformatics},
- publisher = {Frontiers Media SA},
- year = {2014},
- volume = {8},
- url = {https://doi.org/10.3389%2Ffninf.2014.00003},
- doi = {10.3389/fninf.2014.00003}
+  author =       {Campagnola, Luke and Kratz, Megan B. and Manis, Paul
+                  B.},
+  title =        {ACQ4: an open-source software platform for data
+                  acquisition and analysis in neurophysiology
+                  research},
+  journal =      {Frontiers in Neuroinformatics},
+  publisher =    {Frontiers Media SA},
+  year =         2014,
+  volume =       8,
+  url =          {https://doi.org/10.3389%2Ffninf.2014.00003},
+  doi =          {10.3389/fninf.2014.00003}
 }
 
 @phdthesis{CarlsonRogerJohn1988a,
- author = {Carlson, Roger John},
- title = {Quantitative Aspects of High Resolution, Fully
-Resonant, Four-Wave Mixing Spectroscopy For the
-Analysis of Vibronic Mode Coupling in Molecules},
- year = {1988},
- school = {University of Wisconsin-Madison}
+  author =       {Carlson, Roger John},
+  title =        {Quantitative Aspects of High Resolution, Fully
+                  Resonant, Four-Wave Mixing Spectroscopy For the
+                  Analysis of Vibronic Mode Coupling in Molecules},
+  year =         1988,
+  school =       {University of Wisconsin-Madison}
+}
+
+@article{CohenJeremy2021a,
+  doi =          {10.1109/ms.2020.2973362},
+  year =         2021,
+  month =        jan,
+  publisher =    {Institute of Electrical and Electronics Engineers
+                  ({IEEE})},
+  volume =       38,
+  number =       1,
+  pages =        {97--105},
+  author =       {Jeremy Cohen and Daniel S. Katz and Michelle Barker
+                  and Neil Chue Hong and Robert Haines and Caroline
+                  Jay},
+  title =        {The Four Pillars of Research Software Engineering},
+  journal =      {{IEEE} Software}
 }
 
 @article{DalesioLR1991a,
- author = {Dalesio, L. R. and Kraimer, M. R. and Kozubal, A. J.},
- title = {{EPICS} Architecture},
- journal = {ICALEPCS},
- year = {1991},
- volume = {91}
+  author =       {Dalesio, L. R. and Kraimer, M. R. and Kozubal,
+                  A. J.},
+  title =        {{EPICS} Architecture},
+  journal =      {ICALEPCS},
+  year =         1991,
+  volume =       91
 }
 
 @article{Giesbrecht_2022,
- author = {Giesbrecht, Grant and Amsellem, Ariel and Bauer, Timo and Mak, Brian and Wynne, Brian and Qin, Zhihao and Persaud, Arun},
- title = {Hardware-Control: Instrument control and automation
-package},
- journal = {Journal of Open Source Software},
- publisher = {The Open Journal},
- year = {2022},
- month = {apr},
- number = {72},
- volume = {7},
- pages = {2688},
- url = {https://doi.org/10.21105%2Fjoss.02688},
- doi = {10.21105/joss.02688}
+  author =       {Giesbrecht, Grant and Amsellem, Ariel and Bauer,
+                  Timo and Mak, Brian and Wynne, Brian and Qin, Zhihao
+                  and Persaud, Arun},
+  title =        {Hardware-Control: Instrument control and automation
+                  package},
+  journal =      {Journal of Open Source Software},
+  publisher =    {The Open Journal},
+  year =         2022,
+  month =        {apr},
+  number =       72,
+  volume =       7,
+  pages =        2688,
+  url =          {https://doi.org/10.21105%2Fjoss.02688},
+  doi =          {10.21105/joss.02688}
 }
 
 @phdthesis{KainSchuyler2017a,
- author = {Kain, Schuyler},
- title = {Transition of Frequency-Domain Coherent
-Multidimensional Spectroscopic Methods to the
-Femtosecond Time Regime with Applications to
-Nanoscale Semiconductors},
- year = {2017},
- school = {University of Wisconsin-Madison}
+  author =       {Kain, Schuyler},
+  title =        {Transition of Frequency-Domain Coherent
+                  Multidimensional Spectroscopic Methods to the
+                  Femtosecond Time Regime with Applications to
+                  Nanoscale Semiconductors},
+  year =         2017,
+  school =       {University of Wisconsin-Madison}
 }
 
 @article{Koerner_2019,
- author = {Koerner, Lucas},
- title = {Instrbuilder: A Python package for electrical instrument control},
- journal = {Journal of Open Source Software},
- publisher = {The Open Journal},
- year = {2019},
- month = {apr},
- number = {36},
- volume = {4},
- pages = {1172},
- url = {https://doi.org/10.21105%2Fjoss.01172},
- doi = {10.21105/joss.01172}
+  author =       {Koerner, Lucas},
+  title =        {Instrbuilder: A Python package for electrical
+                  instrument control},
+  journal =      {Journal of Open Source Software},
+  publisher =    {The Open Journal},
+  year =         2019,
+  month =        {apr},
+  number =       36,
+  volume =       4,
+  pages =        1172,
+  url =          {https://doi.org/10.21105%2Fjoss.01172},
+  doi =          {10.21105/joss.01172}
 }
 
 @article{Koerner_2020,
- author = {Koerner, Lucas J. and Caswell, Thomas A. and Allan, Daniel B. and Campbell, Stuart I.},
- title = {A Python Instrument Control and Data Acquisition Suite for Reproducible Research},
- journal = {IEEE Transactions on Instrumentation and Measurement},
- publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
- year = {2020},
- month = {apr},
- number = {4},
- volume = {69},
- pages = {1698--1707},
- url = {https://doi.org/10.1109%2Ftim.2019.2914711},
- doi = {10.1109/tim.2019.2914711}
+  author =       {Koerner, Lucas J. and Caswell, Thomas A. and Allan,
+                  Daniel B. and Campbell, Stuart I.},
+  title =        {A Python Instrument Control and Data Acquisition
+                  Suite for Reproducible Research},
+  journal =      {IEEE Transactions on Instrumentation and
+                  Measurement},
+  publisher =    {Institute of Electrical and Electronics Engineers
+                  (IEEE)},
+  year =         2020,
+  month =        {apr},
+  number =       4,
+  volume =       69,
+  pages =        {1698--1707},
+  url =          {https://doi.org/10.1109%2Ftim.2019.2914711},
+  doi =          {10.1109/tim.2019.2914711}
 }
 
 @article{Lauer2020,
- author = {Lauer, Kenneth},
- title = {ophyd Devices: Imposing Hierarchy on the Flat EPICS V3 Namespace},
- journal = {Proceedings of the 17th International Conference on Accelerator and Large Experimental Physics Control Systems},
- publisher = {JACoW Publishing, Geneva, Switzerland},
- year = {2020},
- volume = {ICALEPCS2019},
- pages = {USA},
- url = {https://jacow.org/icalepcs2019/doi/JACoW-ICALEPCS2019-WEPHA083.html},
- doi = {10.18429/JACOW-ICALEPCS2019-WEPHA083},
- copyright = {Creative Commons Attribution 3.0 Unported},
- keyword = {Accelerator Physics, Device Control and Integrating Diverse Systems},
- language = {en}
+  author =       {Lauer, Kenneth},
+  title =        {ophyd Devices: Imposing Hierarchy on the Flat EPICS
+                  V3 Namespace},
+  journal =      {Proceedings of the 17th International Conference on
+                  Accelerator and Large Experimental Physics Control
+                  Systems},
+  publisher =    {JACoW Publishing, Geneva, Switzerland},
+  year =         2020,
+  volume =       {ICALEPCS2019},
+  pages =        {USA},
+  url =
+                  {https://jacow.org/icalepcs2019/doi/JACoW-ICALEPCS2019-WEPHA083.html},
+  doi =          {10.18429/JACOW-ICALEPCS2019-WEPHA083},
+  copyright =    {Creative Commons Attribution 3.0 Unported},
+  keyword =      {Accelerator Physics, Device Control and Integrating
+                  Diverse Systems},
+  language =     {en}
 }
 
 @article{MeyerKentAlbert2004a,
- author = {Meyer, Kent A and Wright, John C. and Thompson, David E},
- title = {Frequency and Time-Resolved Triply Vibrationally
-Enhanced Four-Wave Mixing Spectroscopy Frequency and
-Time-Resolved Triply Vibrationally Enhanced
-Four-Wave Mixing Spectroscopy},
- journal = {The Journal of Physical Chemistry A},
- year = {2004},
- month = {December},
- number = {52},
- volume = {108},
- pages = {11485--11493},
- doi = {10.1021/jp046137j}
+  author =       {Meyer, Kent A and Wright, John C. and Thompson,
+                  David E},
+  title =        {Frequency and Time-Resolved Triply Vibrationally
+                  Enhanced Four-Wave Mixing Spectroscopy Frequency and
+                  Time-Resolved Triply Vibrationally Enhanced
+                  Four-Wave Mixing Spectroscopy},
+  journal =      {The Journal of Physical Chemistry A},
+  year =         2004,
+  month =        {December},
+  number =       52,
+  volume =       108,
+  pages =        {11485--11493},
+  doi =          {10.1021/jp046137j}
 }
 
 @phdthesis{MeyerKentAlbert2004b,
- author = {Meyer, Kent Albert},
- title = {Freqncy-Scanned Ultrafast Spectroscopic Techniques
-Applied to Infrared Four-Wave Mixing Spectroscopy},
- year = {2004},
- school = {University of Wisconsin--Madison}
-}
-
-@manual{modbus,
- title = {MODBUS APPLICATION PROTOCOL SPECIFICATION},
- year = {2012},
- organization = {Modbus},
- version = {V1.1b3}
+  author =       {Meyer, Kent Albert},
+  title =        {Freqncy-Scanned Ultrafast Spectroscopic Techniques
+                  Applied to Infrared Four-Wave Mixing Spectroscopy},
+  year =         2004,
+  school =       {University of Wisconsin--Madison}
 }
 
 @article{MukamelShaul2000a,
- author = {Mukamel, Shaul},
- title = {Multidimensional Femtosecond Correlation Spectroscopies of
-Electronic and Vibrational Excitations},
- journal = {Annual Review of Physical Chemistry},
- publisher = {Annual Reviews},
- year = {2000},
- month = {oct},
- number = {1},
- volume = {51},
- pages = {691--729},
- url = {https://doi.org/10.1146/annurev.physchem.51.1.691},
- doi = {10.1146/annurev.physchem.51.1.691}
+  author =       {Mukamel, Shaul},
+  title =        {Multidimensional Femtosecond Correlation
+                  Spectroscopies of Electronic and Vibrational
+                  Excitations},
+  journal =      {Annual Review of Physical Chemistry},
+  publisher =    {Annual Reviews},
+  year =         2000,
+  month =        {oct},
+  number =       1,
+  volume =       51,
+  pages =        {691--729},
+  url =          {https://doi.org/10.1146/annurev.physchem.51.1.691},
+  doi =          {10.1146/annurev.physchem.51.1.691}
 }
 
-@misc{nidaqmx,
- title = {Getting Started with NI-DAQmx},
- year = {2022},
- url = {https://www.ni.com/en-us/support/documentation/supplemental/06/getting-started-with-ni-daqmx--main-page.html},
- note = {Accessed: 2022-10-02}
-}
-
-@manual{picam,
- title = {PICam™ 5.x Programmer's Manual},
- year = {2021},
- issue = {12},
- organization = {Teledyne Princeton Instruments}
-}
-
-@misc{pylablib,
- author = {Shkarin, Alexey},
- title = {pylablib},
- year = {2022},
- url = {https://pypi.org/project/pylablib},
- note = {Accessed: 2022-10-02}
-}
-
-@misc{pymeasure,
- title = {PyMeasure},
- year = {2022},
- url = {https://pymeasure.readthedocs.io/},
- note = {Accessed: 2022-10-02}
+@article{NowogrodzkiAnna2019a,
+  doi =          {10.1038/d41586-019-02046-0},
+  year =         2019,
+  month =        jul,
+  publisher =    {Springer Science and Business Media {LLC}},
+  volume =       571,
+  number =       7763,
+  pages =        {133--134},
+  author =       {Anna Nowogrodzki},
+  title =        {How to support open-source software and stay sane},
+  journal =      {Nature}
 }
 
 @book{Raymond_1996,
- author = {Raymond, Eric S.},
- title = {The new hacker’s dictionary},
- publisher = {MIT Press},
- year = {1996},
- address = {Cambridge, Mass},
- callnumber = {PN6231.E4 H3 1996},
- edition = {3rd ed},
- isbn = {9780262181785}
+  author =       {Raymond, Eric S.},
+  title =        {The new hacker’s dictionary},
+  publisher =    {MIT Press},
+  year =         1996,
+  address =      {Cambridge, Mass},
+  callnumber =   {PN6231.E4 H3 1996},
+  edition =      {3rd ed},
+  isbn =         9780262181785
 }
 
 @article{SalazarChaseA2021a,
- author = {Salazar, Chase A. and Thompson, Blaise J. and Knapp, Spring M. M. and Myers, Steven R. and Stahl, Shannon S.},
- title = {Multichannel gas-uptake/evolution reactor for
-monitoring liquid-phase chemical reactions},
- journal = {Review of Scientific Instruments},
- publisher = {AIP Publishing},
- year = {2021},
- month = {April},
- number = {4},
- volume = {92},
- pages = {044103},
- doi = {10.1063/5.0043007}
-}
-
-@manual{scpi,
- title = {Standard Commands for Programmable Instruments (SCPI)},
- year = {1999},
- organization = {SCPI Consortium},
- version = {1999.0}
+  author =       {Salazar, Chase A. and Thompson, Blaise J. and Knapp,
+                  Spring M. M. and Myers, Steven R. and Stahl, Shannon
+                  S.},
+  title =        {Multichannel gas-uptake/evolution reactor for
+                  monitoring liquid-phase chemical reactions},
+  journal =      {Review of Scientific Instruments},
+  publisher =    {AIP Publishing},
+  year =         2021,
+  month =        {April},
+  number =       4,
+  volume =       92,
+  pages =        044103,
+  doi =          {10.1063/5.0043007}
 }
 
 @article{SegalJudith2005a,
- author = {Segal, Judith},
- title = {When Software Engineers Met Research Scientists: A Case Study},
- journal = {Empirical Software Engineering},
- year = {2005},
- month = {oct},
- number = {4},
- volume = {10},
- pages = {517--536},
- doi = {10.1007/s10664-005-3865-y}
+  author =       {Segal, Judith},
+  title =        {When Software Engineers Met Research Scientists: A
+                  Case Study},
+  journal =      {Empirical Software Engineering},
+  year =         2005,
+  month =        {oct},
+  number =       4,
+  volume =       10,
+  pages =        {517--536},
+  doi =          {10.1007/s10664-005-3865-y}
 }
 
 @phdthesis{ThompsonBlaiseJonathan2018a,
- author = {Thompson, Blaise Jonathan},
- title = {Development of Frequency Domain Multidimensional
-Spectroscopy with Applications in Semiconductor
-Photophysics},
- year = {2018},
- school = {University of Wisconsin--Madison}
-}
-
-@manual{thorlabs_apt,
- title = {Thorlabs Motion Controllers Host-Controller Communications Protocol},
- year = {2022},
- issue = {31},
- organization = {Thorlabs, GmbH}
-}
-
-@misc{trspectrometer,
- author = {Tapping, Patrick},
- title = {TRSpectrometer Documentation},
- year = {2021},
- url = {https://trspectrometer.readthedocs.io/en/latest/},
- note = {Accessed: 2022-10-02}
+  author =       {Thompson, Blaise Jonathan},
+  title =        {Development of Frequency Domain Multidimensional
+                  Spectroscopy with Applications in Semiconductor
+                  Photophysics},
+  year =         2018,
+  school =       {University of Wisconsin--Madison}
 }
 
 @article{WeberSebastien2021a,
- author = {Weber, S. J.},
- title = {PyMoDAQ: An open-source Python-based software for
-modular data acquisition},
- journal = {Review of Scientific Instruments},
- publisher = {AIP Publishing},
- year = {2021},
- month = {April},
- number = {4},
- volume = {92},
- pages = {045104},
- doi = {10.1063/5.0032116}
+  author =       {Weber, S. J.},
+  title =        {PyMoDAQ: An open-source Python-based software for
+                  modular data acquisition},
+  journal =      {Review of Scientific Instruments},
+  publisher =    {AIP Publishing},
+  year =         2021,
+  month =        {April},
+  number =       4,
+  volume =       92,
+  pages =        045104,
+  doi =          {10.1063/5.0032116}
 }
 
 @article{WrightJohnCurtis2011a,
- author = {Wright, John C.},
- title = {Multiresonant Coherent Multidimensional Spectroscopy},
- journal = {Annual Review of Physical Chemistry},
- year = {2011},
- month = {may},
- number = {1},
- volume = {62},
- pages = {209--230},
- doi = {10.1146/annurev-physchem-032210-103551}
+  author =       {Wright, John C.},
+  title =        {Multiresonant Coherent Multidimensional
+                  Spectroscopy},
+  journal =      {Annual Review of Physical Chemistry},
+  year =         2011,
+  month =        {may},
+  number =       1,
+  volume =       62,
+  pages =        {209--230},
+  doi =          {10.1146/annurev-physchem-032210-103551}
+}
+
+@manual{modbus,
+  title =        {MODBUS APPLICATION PROTOCOL SPECIFICATION},
+  year =         2012,
+  organization = {Modbus},
+  version =      {V1.1b3}
+}
+
+@misc{nidaqmx,
+  title =        {Getting Started with NI-DAQmx},
+  year =         2022,
+  url =
+                  {https://www.ni.com/en-us/support/documentation/supplemental/06/getting-started-with-ni-daqmx--main-page.html},
+  note =         {Accessed: 2022-10-02}
+}
+
+@manual{picam,
+  title =        {PICam™ 5.x Programmer's Manual},
+  year =         2021,
+  issue =        12,
+  organization = {Teledyne Princeton Instruments}
+}
+
+@misc{pylablib,
+  author =       {Shkarin, Alexey},
+  title =        {pylablib},
+  year =         2022,
+  url =          {https://pypi.org/project/pylablib},
+  note =         {Accessed: 2022-10-02}
+}
+
+@misc{pymeasure,
+  title =        {PyMeasure},
+  year =         2022,
+  url =          {https://pymeasure.readthedocs.io/},
+  note =         {Accessed: 2022-10-02}
+}
+
+@manual{scpi,
+  title =        {Standard Commands for Programmable Instruments
+                  (SCPI)},
+  year =         1999,
+  organization = {SCPI Consortium},
+  version =      {1999.0}
+}
+
+@manual{thorlabs_apt,
+  title =        {Thorlabs Motion Controllers Host-Controller
+                  Communications Protocol},
+  year =         2022,
+  issue =        31,
+  organization = {Thorlabs, GmbH}
+}
+
+@misc{trspectrometer,
+  author =       {Tapping, Patrick},
+  title =        {TRSpectrometer Documentation},
+  year =         2021,
+  url =          {https://trspectrometer.readthedocs.io/en/latest/},
+  note =         {Accessed: 2022-10-02}
 }
 
 @misc{yaq-traits,
- title = {yaq-traits},
- url = {https://pypi.org/project/yaq-traits},
- note = {Accessed: 2022-10-02}
+  title =        {yaq-traits},
+  url =          {https://pypi.org/project/yaq-traits},
+  note =         {Accessed: 2022-10-02}
 }
 
 @misc{yaqc,
- title = {yaqc},
- url = {https://pypi.org/project/yaqc},
- note = {Accessed: 2022-10-02}
+  title =        {yaqc},
+  url =          {https://pypi.org/project/yaqc},
+  note =         {Accessed: 2022-10-02}
 }
 
 @misc{yaqc-bluesky,
- title = {yaqc-bluesky},
- url = {https://pypi.org/project/yaqc-bluesky},
- note = {Accessed: 2022-10-02}
+  title =        {yaqc-bluesky},
+  url =          {https://pypi.org/project/yaqc-bluesky},
+  note =         {Accessed: 2022-10-02}
 }
 
 @misc{yaqc-qtpy,
- title = {yaqc-qtpy},
- url = {https://pypi.org/project/yaqc-qtpy},
- note = {Accessed: 2022-10-02}
+  title =        {yaqc-qtpy},
+  url =          {https://pypi.org/project/yaqc-qtpy},
+  note =         {Accessed: 2022-10-02}
 }
 
 @misc{yaqd-brooks-mfc,
- title = {yaqd-brooks-mfc-gf source code},
- url = {https://github.com/yaq-project/yaqd-brooks/blob/7cc1de/yaqd_brooks/_brooks_mfc_gf.py},
- note = {Accessed: 2022-10-02}
+  title =        {yaqd-brooks-mfc-gf source code},
+  url =
+                  {https://github.com/yaq-project/yaqd-brooks/blob/7cc1de/yaqd_brooks/_brooks_mfc_gf.py},
+  note =         {Accessed: 2022-10-02}
 }
 
 @misc{yaqd-core-python,
- title = {yaqd-core},
- url = {https://pypi.org/project/yaqd-core},
- note = {Accessed: 2022-10-02}
+  title =        {yaqd-core},
+  url =          {https://pypi.org/project/yaqd-core},
+  note =         {Accessed: 2022-10-02}
 }
 
 @misc{yaqd-fakes,
- title = {yaqd-fakes},
- url = {https://pypi.org/project/yaqd-fakes},
- note = {Accessed: 2022-10-02}
+  title =        {yaqd-fakes},
+  url =          {https://pypi.org/project/yaqd-fakes},
+  note =         {Accessed: 2022-10-02}
 }
